<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_company_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/select_a_product"
        android:textSize="30dp" />

    <Spinner
        android:id="@+id/spn_productSelection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/productIssues_hints_to_do" />


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left" >
        />

        <ListView
            android:id="@+id/productIssues_lv_jobNo"
            android:layout_width="125dp"
            android:footerDividersEnabled="true"
            android:headerDividersEnabled="true"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:orientation="vertical"
            android:stretchColumns="1"
           >

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/job_no"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_productIssues_jobNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/request_date"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_productIssues_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/problem"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/tv_productIssues_problem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="1dp"
                    android:layout_span="2" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</LinearLayout>